RESOLVED FIXED74215
[chromium] Prevent ASSERT in legitimate out-of-memory case.
https://bugs.webkit.org/show_bug.cgi?id=74215
Summary [chromium] Prevent ASSERT in legitimate out-of-memory case.
Eric Penner
Reported 2011-12-09 14:22:18 PST
[chromium] Prevent ASSERT in legitimate out-of-memory case.
Attachments
Patch (1.62 KB, patch)
2011-12-09 14:22 PST, Eric Penner
no flags
Eric Penner
Comment 1 2011-12-09 14:22:59 PST
Adrienne Walker
Comment 2 2011-12-09 14:29:20 PST
Comment on attachment 118639 [details] Patch Oh, whoops. Thanks for fixing that.
James Robinson
Comment 3 2011-12-09 14:38:58 PST
Comment on attachment 118639 [details] Patch Ah right. R=me
WebKit Review Bot
Comment 4 2011-12-09 18:35:51 PST
Comment on attachment 118639 [details] Patch Clearing flags on attachment: 118639 Committed r102512: <http://trac.webkit.org/changeset/102512>
WebKit Review Bot
Comment 5 2011-12-09 18:35:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.