[chromium] Prevent ASSERT in legitimate out-of-memory case. https://bugs.webkit.org/show_bug.cgi?id=74215

Patch by Eric Penner <epenner@google.com> on 2011-12-09
Reviewed by James Robinson.

* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::TiledLayerChromium::updateCompositorResources):

Canonical link: https://commits.webkit.org/90913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102512 268f45cc-cd09-0410-ab3c-d52691b4dbfc